--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_papeleria?useUnicode=true&u
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto= update
 logging.level.org.hibernate.SQL=debug
 logging.pattern.dateformat=dd-mm-yyyy
 spring.jackson.time-zone = America/Mexico_City
